--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
 	<h1>Jasmine Don</h1>
-	<p>testing</p>
+	<p><a href="https://jasminedon.github.io/articles/" title="articles">articles</p>
+	<p><a href="https://jasminedon.github.io/fiction-comedy/" title="fiction & comedy">fiction & comedy</p>
+	<p><a href="resume.pdf" title="resume">resume</p>
 </body>
 </html>
