--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -12,7 +12,7 @@
 <h1>Fiction & Comedy</h1>
   <h2>Fiction</h2>
   <p>My short story <a href="https://issuu.com/westwinducla/docs/fall_17_westwind_journal/70">“Little Brother”</a> was published in the Fall 2017 issue of Westwind.</p>
-  <p>Another short story of mine called “Avenal, CA” was chosen as a winner of the 2016 David Sedaris Humor Writing Contest, but that webpage seems to have been swallowed up by the internet. You can read it here instead.</p>
+  <p>Another short story of mine called “Avenal, CA” was chosen as a winner of the 2016 David Sedaris Humor Writing Contest, but that webpage seems to have been swallowed up by the internet. You can read it <a href="Avenal.pdf>here</a> instead.</p>
   <h2>The Westwood Enabler</h2>
   <p>The Enabler is a satirical news magazine (like The Onion) based at UCLA. My author page is <a href="http://westwoodenabler.com/author/jdon528/">here</a>.</p>
 </body>
