--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<h1>Fiction & Comedy</h1>
+<h1>Fiction and Comedy</h1>
   <h2>Fiction</h2>
   <p>My short story <a href="https://issuu.com/westwinducla/docs/fall_17_westwind_journal/70">“Little Brother”</a> was published in the Fall 2017 issue of Westwind.</p>
   <p>Another short story of mine called “Avenal, CA” was chosen as a winner of the 2016 David Sedaris Humor Writing Contest, but that webpage seems to have been swallowed up by the internet. You can read it <a href="Avenal.pdf>here</a> instead.</p>
