--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 	<title> Jasmine Don </title>
 </head>
 <body>
+	<div class="hero-gradient">
+		<div class="title noselect">Jasmine Don</div>		
+	</div>
 
-	<h1>Jasmine Don</h1>
-	<p><a href="https://jasminedon.github.io/articles/" title="articles">articles</p>
-	<p><a href="https://jasminedon.github.io/fiction-comedy/" title="fiction & comedy">fiction & comedy</p>
-	<p><a href="resume.pdf" title="resume">resume</p>
+	<div class="center-wrapper">
+		<div class="black-bar">
+			<span><a href="https://jasminedon.github.io/articles/" title="articles">Articles</a></span>
+			<span><a href="https://jasminedon.github.io/fiction-comedy/" title="fiction & comedy">Fiction &amp; Comedy</a></span>
+			<span><a href="resume.pdf" title="resume">Resume</a></span>
+		</div>
+	</div>
+
 </body>
 </html>
