--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<title> Jasmine Don </title>
 </head>
 <body>
-	<div class="hero-gradient">
+	<div class="hero-gradient-lg">
 		<div class="title noselect">Jasmine Don</div>		
 	</div>
 
 	<div class="center-wrapper">
 		<div class="black-bar">
-			<span><a href="https://jasminedon.github.io/articles/" title="articles">Articles</a></span>
-			<span><a href="https://jasminedon.github.io/fiction-comedy/" title="fiction & comedy">Fiction &amp; Comedy</a></span>
+			<span><a href="articles/" title="articles">Articles</a></span>
+			<span><a href="fiction-comedy/" title="fiction & comedy">Fiction &amp; Comedy</a></span>
 			<span><a href="resume.pdf" title="resume">Resume</a></span>
 		</div>
 	</div>
