--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -3,18 +3,38 @@
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
-	<link rel="stylesheet" href="style.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<title> articles </title>
+	<link rel="stylesheet" href="../style.css" />
+	<title> Fiction and Comedy | Jasmine Don </title>
 </head>
 <body>
 
-<h1>Fiction and Comedy</h1>
-  <h2>Fiction</h2>
-  <p>My short story <a href="https://issuu.com/westwinducla/docs/fall_17_westwind_journal/70">“Little Brother”</a> was published in the Fall 2017 issue of Westwind.</p>
-  <p>Another short story of mine called “Avenal, CA” was chosen as a winner of the 2016 David Sedaris Humor Writing Contest, but that webpage seems to have been swallowed up by the internet. You can read it <a href="Avenal.pdf">here</a> instead.</p>
-	  
-  <h2>The Westwood Enabler</h2>
-  <p>The Enabler is a satirical news magazine (like The Onion) based at UCLA. My author page is <a href="http://westwoodenabler.com/author/jdon528/">here</a>.</p>
+  <div class="hero-gradient-sm">
+    <div class="title noselect"><a href="../index.html">Jasmine Don</a></div>
+  </div>
+  <div class="center-wrapper">
+    <div class="black-bar">
+      <span><a href="../articles" title="articles">Articles</a></span>
+      <span class="active-page">Fiction &amp; Comedy</span>
+      <span><a href="../resume.pdf" title="resume" target="_blank">Resume</a></span>
+    </div>
+  </div>  
+
+  <div class="card">
+    <div class="card-title"> 
+  		<h2>Fiction</h2>
+  	</div>
+  	<div class="card-content">
+	  <p>My short story <a href="https://issuu.com/westwinducla/docs/fall_17_westwind_journal/70" target="_blank">"Little Brother"</a> was published in the Fall 2017 issue of Westwind.</p>
+	  <p>Another short story of mine called "Avenal, CA" was chosen as a winner of the 2016 David Sedaris Humor Writing Contest, but that webpage seems to have been swallowed up by the internet. You can read it <a href="Avenal.pdf">here</a> instead.</p>
+	</div>
+  </div>
+
+  <div class="card" style="animation-delay: .1s">
+    <div class="card-title"> 
+  		<h2>The Westwood Enabler</h2>
+  	</div>
+  	<div class="card-content">	  
+  	<p>The Enabler is a satirical news magazine (like The Onion) based at UCLA. My author page is <a href="http://westwoodenabler.com/author/jdon528/" target="_blank">here</a>.</p>
+  </div>
 </body>
 </html>
