--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<title> Jasmine Don </title>
 </head>
 <body>
@@ -16,9 +15,15 @@
 		<div class="black-bar">
 			<span><a href="articles/" title="articles">Articles</a></span>
 			<span><a href="fiction-comedy/" title="fiction & comedy">Fiction &amp; Comedy</a></span>
-			<span><a href="resume.pdf" title="resume">Resume</a></span>
+			<span><a href="resume.pdf" title="resume" target="_blank">Resume</a></span>
 		</div>
 	</div>
+
+	<div class="card">
+  	<div class="card-content">
+	  <p>Hey there, I’m Jasmine! I’m an LA based writer with a background in fiction, screenwriting, and comedy. I also write articles and manage content scheduling for digital publications.</p>
+	</div>
+  </div>
 
 </body>
 </html>
