--- a/fiction-comedy/night shift draft1.html
+++ b/fiction-comedy/night shift draft1.html
@@ -260,7 +260,7 @@ Ah, fuck it, she&#39;s gone.
 (else:)[
 	(if: (history:) contains &quot;meat1j&quot;)[(go-to: &quot;meat2&quot;)]
 	(else:)[(go-to: &quot;meat1&quot;)]
-]</tw-passagedata><tw-passagedata pid="49" name="garagecheck" tags="" position="2002,500" size="100,100">(if: (history:) contains &quot;garage2l&quot;) [(go-to: &quot;garage3&quot;)]
+]</tw-passagedata><tw-passagedata pid="49" name="garagecheck" tags="" position="2002,500" size="100,100">(if: (history:) contains &quot;garage2l&quot;) [(go-to: &quot;garage3a&quot;)]
 (else:)[
 	(if: (history:) contains &quot;garage1b&quot;)[(go-to: &quot;garage2&quot;)]
 	(else:)[(go-to: &quot;garage1&quot;)]
@@ -326,7 +326,7 @@ Is there someone here who actually knows what they&#39;re doing?
 
 [[&gt; Try not to die inside.|floor2n]]</tw-passagedata><tw-passagedata pid="64" name="floor2n" tags="" position="800,4851" size="100,100">Just as all of the blood is about to vaporize directly out of your body, you hear a familiar voice.
 
-[[floor2o]]</tw-passagedata><tw-passagedata pid="65" name="floor2o" tags="" position="800,5001" size="100,100">QuickGrocer Girl:
+[[&gt;&gt;|floor2o]]</tw-passagedata><tw-passagedata pid="65" name="floor2o" tags="" position="800,5001" size="100,100">QuickGrocer Girl:
 
 Excuse me, could you help me find something, please?
 
@@ -619,8 +619,7 @@ They don&#39;t want you to realize that you have that kind of power.
 
 Of course. You gotta know your own worth.
 
-[[&gt; &quot;Do you know anything about the store being haunted?&quot;|garage4]]
-[[&gt; &quot;Well, I should get back.&quot;|garage3a]]</tw-passagedata><tw-passagedata pid="128" name="garage3a" tags="" position="1601,3100" size="100,100">You walk back into the store.
+[[&gt; &quot;Do you know anything about the store being haunted?&quot;|garage4]]</tw-passagedata><tw-passagedata pid="128" name="garage3a" tags="" position="1601,3100" size="100,100">You walk back into the store.
 
 You think about how much time you&#39;ve poured into this job. You&#39;re never going to get those hours back. You&#39;re never going to get to spend them on anything else.
 
@@ -647,7 +646,7 @@ Maybe you deserve a break.
 
 [[&gt;&gt;|garage3c]]</tw-passagedata><tw-passagedata pid="134" name="garage3c" tags="" position="1601,3400" size="100,100">As you walk by the smoothie bar, a customer approaches you.
 
-[[garage3d]]</tw-passagedata><tw-passagedata pid="135" name="garage3d" tags="" position="1641,3550" size="100,100">Kenneth:
+[[&gt;&gt;|garage3d]]</tw-passagedata><tw-passagedata pid="135" name="garage3d" tags="" position="1641,3550" size="100,100">Kenneth:
 
 Hey there. I&#39;ll just have the usual, please.
 
@@ -1133,11 +1132,11 @@ You&#39;re lying on the floor somewhere. You stand up slowly as a wave of full-b
 
 Instead, your hand lands on a tray full of various utensils. They clink together as you pass through them. The sound makes Kara turn her head.
 
-[[&gt;&gt;|loop1e]]</tw-passagedata><tw-passagedata pid="251" name="loop1e" tags="" position="2099,2501" size="100,100">Kara: ...hello? Did someone just walk by?
+[[&gt;&gt;|loop1e]]</tw-passagedata><tw-passagedata pid="251" name="loop1e" tags="" position="2099,2501" size="100,100">Kara: ...hello? 
 
-[[&gt;&gt;|loop1f]]</tw-passagedata><tw-passagedata pid="252" name="loop1f" tags="" position="2099,2651" size="100,100">Everything starts fading to white again. You didn&#39;t know that feeling this lucid was even possible. Your senses are approaching some kind of infinity with horrifying speed. You can feel every single cell in your body contracting, flowing, pulsing, burning. They&#39;re being ripped out of this universe one by one to be reassembled
+[[&gt;&gt;|loop1f]]</tw-passagedata><tw-passagedata pid="252" name="loop1f" tags="" position="2099,2651" size="100,100">You didn&#39;t know that feeling this lucid was even possible. Your senses are approaching some kind of infinity with horrifying speed. You can feel every single cell in your body contracting, flowing, pulsing, burning. They&#39;re being ripped out of this universe one by one to be reassembled somewhere far away.
 
-[[&gt; Scream.|loop1g]]</tw-passagedata><tw-passagedata pid="253" name="loop1g" tags="" position="2099,2801" size="100,100">You blink. Suddenly you&#39;re on the sales floor, by the drink cooler, covered in sweat. Standing a few feet away from you is...you, facing a row of iced matcha lattes.
+[[&gt; Everything starts fading to white.|loop1g]]</tw-passagedata><tw-passagedata pid="253" name="loop1g" tags="" position="2099,2801" size="100,100">//Blink.// Suddenly you&#39;re on the sales floor, by the drink cooler, covered in sweat. Standing a few feet away from you is...you, facing a row of iced matcha lattes.
 
 You scream but it&#39;s no use. It feels like something impossibly heavy is grinding the heel of its boot onto your chest. You scream until your muscles shake but still no air comes out.
 
@@ -1145,11 +1144,9 @@ You scream but it&#39;s no use. It feels like something impossibly heavy is grin
 
 You watch yourself bend down and pick the bottle cap off of the floor, examining it intently.
 
-[[&gt;&gt;|loop1i]]</tw-passagedata><tw-passagedata pid="255" name="loop1i" tags="" position="2099,3101" size="100,100">But you feel yourself being torn out of the world again. 
+[[&gt;&gt;|loop1i]]</tw-passagedata><tw-passagedata pid="255" name="loop1i" tags="" position="2099,3101" size="100,100">But you feel yourself being torn out of the world again. You scream.
 
-Everything fades to white.
-
-[[&gt;&gt;|loop1j]]</tw-passagedata><tw-passagedata pid="256" name="loop1j" tags="" position="2099,3251" size="100,100">You re-materialize in the bakery. Laura is preparing a rack of pastries to bake for the morning rush. 
+[[&gt; Everything starts fading to white.|loop1j]]</tw-passagedata><tw-passagedata pid="256" name="loop1j" tags="" position="2099,3251" size="100,100">//Blink.//You re-materialize in the bakery. Laura is preparing a rack of pastries to bake for the morning rush. 
 
 She locks eyes with you.
 
@@ -1159,17 +1156,17 @@ She can see you.
 
 It&#39;s happening again. You brace yourself...
 
-[[&gt; Everything fades to white.|loop1l]]</tw-passagedata><tw-passagedata pid="258" name="loop1l" tags="" position="2101,3550" size="100,100">You&#39;re standing just outside the store.
+[[&gt; Everything starts fading to white.|loop1l]]</tw-passagedata><tw-passagedata pid="258" name="loop1l" tags="" position="2101,3550" size="100,100">//Blink.//You&#39;re standing just outside the store.
 
-QuickGrocer Girl is there. She&#39;s leaning against a pillar smoking a cigarette. 
+The QuickGrocer Girl is there. She&#39;s leaning against a pillar smoking a cigarette. 
 
 She&#39;s holding the bottle cap in her left hand, turning it over and over again like a gold coin.
 
 [[&gt; Talk to her.|loop2a]]</tw-passagedata><tw-passagedata pid="259" name="loop2a" tags="" position="2301,1800" size="100,100">You: Isabelle...can you hear me?
 
-[[&gt;&gt;|loop2b]]</tw-passagedata><tw-passagedata pid="260" name="loop2b" tags="" position="2300,1998" size="100,100">She tenses up a little bit. Can she actually hear you? No, she didn&#39;t turn in your direction.
+[[&gt;&gt;|loop2b]]</tw-passagedata><tw-passagedata pid="260" name="loop2b" tags="" position="2300,1998" size="100,100">She tenses up a little bit. Can she actually hear you? No, it doesn&#39;t seem like it. But...
 
-But the smoke pouring out from the end of her cigarette is now rising in a thin, pin-straight strand of gray. It bends and flexes with the sound of your voice, like a waveform dissolving into the sky. She follows it with her eyes.
+The smoke pouring out from the end of her cigarette is now rising in a thin, pin-straight strand of gray. It bends and flexes with the sound of your voice, like a waveform dissolving into the sky. She follows it with her eyes.
 
 [[&gt; &quot;Please listen to me.&quot;|loop2c]]</tw-passagedata><tw-passagedata pid="261" name="loop2c" tags="" position="2300,2148" size="100,100">You: Something really bad is happening. Pacificon Foods has us trapped in this...system, and we&#39;re literally stuck living the same day and doing the same work over and over again and none of us remember it. Alberto is in on it. Corporate is in on it.
 
@@ -1179,9 +1176,9 @@ I&#39;m not going to remember any of this tomorrow. But you need to. Please.
 
 You&#39;re hit with that feeling again, like your bones and blood and flesh are being prickled out of existence, and the only things left of you in this plane are all your bare nerve endings spread out in the shape of a person.
 
-[[&gt; Everything is fading to white.|loop2e]]</tw-passagedata><tw-passagedata pid="263" name="loop2e" tags="" position="2300,2448" size="100,100">You: (text-style: &quot;blur&quot;)[Please remember. Please find me and tell me. If you can hear me, I need you to trust me. I&#39;m going to be trapped without you.]
+[[&gt; Everything starts fading to white.|loop2e]]</tw-passagedata><tw-passagedata pid="263" name="loop2e" tags="" position="2300,2448" size="100,100">You: (text-style: &quot;blur&quot;)[Please remember. Please find me and tell me. If you can hear me, I need you to trust me. I&#39;m going to be trapped without you.]
 
-[[&gt; Everything is fading to white.|loop2f]]</tw-passagedata><tw-passagedata pid="264" name="loop2f" tags="" position="2300,2598" size="100,100">You: (text-style: &quot;blurrier&quot;) [Isabelle, I know this has nothing to do with you, but if you can find me and help me, it would mean everything. I know you can do it. I believe in you. Please, please help me remember.]
+[[&gt; Everything starts fading to white.|loop2f]]</tw-passagedata><tw-passagedata pid="264" name="loop2f" tags="" position="2300,2598" size="100,100">You: (text-style: &quot;blurrier&quot;) [Isabelle, I know this has nothing to do with you, but if you can find me and help me, it would mean everything. I know you can do it. I believe in you. Please, please help me remember.]
 
 [[&gt; Everything...|reset1]]</tw-passagedata><tw-passagedata pid="265" name="reset1" tags="" position="2502,1801" size="100,100">night shift
 
@@ -1203,17 +1200,17 @@ Your boss, Alberto, walks past and gives you a friendly wave. You smile and wave
 
 [[&gt; &quot;Of course.&quot;|reset1e]]</tw-passagedata><tw-passagedata pid="270" name="reset1e" tags="" position="2502,2551" size="100,100">Just as you reach for the clipboard, the power goes out.
 
-[[&gt;&gt;|reset1f]]</tw-passagedata><tw-passagedata pid="271" name="reset1f" tags="" position="2502,2701" size="100,100">And, without warning, a deafening explosion.
+[[&gt;&gt;|reset1f]]</tw-passagedata><tw-passagedata pid="271" name="reset1f" tags="" position="2502,2701" size="100,100">And, without warning - a deafening explosion.
 
-[[&gt;&gt;|reset1g]]</tw-passagedata><tw-passagedata pid="272" name="reset1g" tags="" position="2502,2851" size="100,100">You&#39;re knocked onto your feet by a wall of force. You&#39;re dead, you think. This is how you&#39;re going to die. No point in trying to fight it. Everything around you is spinning.
+[[&gt;&gt;|reset1g]]</tw-passagedata><tw-passagedata pid="272" name="reset1g" tags="" position="2502,2851" size="100,100">You&#39;re knocked onto the floor by a wall of force. You&#39;re dead, you think. This is how you&#39;re going to die. No point in trying to fight it. Everything around you is spinning.
 
 And, all of a sudden, you feel like there are millions of you.
 
-[[&gt;&gt;|reset1h]]</tw-passagedata><tw-passagedata pid="273" name="reset1h" tags="" position="2502,3001" size="100,100">You try to steady your breath as a million different consciousnesses flood into your head at once, simultaneous and contradictory and each the size of a fully formed mind. 
+[[&gt;&gt;|reset1h]]</tw-passagedata><tw-passagedata pid="273" name="reset1h" tags="" position="2502,3001" size="100,100">You try to steady your breath as whole new consciousnesses flood into your head all at once, simultaneous and contradictory and each the size of a fully formed mind. 
 
 It feels like the outline of your life is echoing, like each beat of your pounding heart is stamping a new copy of you into the universe.
 
-[[&gt;&gt;|reset1i]]</tw-passagedata><tw-passagedata pid="274" name="reset1i" tags="" position="2502,3151" size="100,100">You slowly regain awareness of the world. Alarms are going off. You&#39;re still lying curled up on the floor.
+[[&gt;&gt;|reset1i]]</tw-passagedata><tw-passagedata pid="274" name="reset1i" tags="" position="2502,3151" size="100,100">You open your eyes and slowly regain awareness of the world. Alarms are going off. You&#39;re still lying curled up on the floor.
 
 Standing in front of you is the most beautiful girl you&#39;ve ever seen, and she&#39;s holding a pair of bolt cutters.
 
