--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -35,9 +35,10 @@
   	</div>
   	<div class="card-content">	  
   	<p>The Enabler is a satirical news magazine (like The Onion) based at UCLA. My author page is <a href="http://westwoodenabler.com/author/jdon528/" target="_blank">here</a>.</p>
-  </div>
+ 	</div>
+</div>
 	  
-<div class="card">
+<div class="card" style="animation-delay: .1s">
     <div class="card-title"> 
   		<h2>Games</h2>
   	</div>
