--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -24,8 +24,8 @@
   		<h2>Fiction</h2>
   	</div>
   	<div class="card-content">
-	  <p><a href="http://cahoodaloodaling.com/divorcees-by-jasmine-don/" target="_blank">Divorcees</a> // Cahoodaloodaling, Fall 2018</p>
-	  <p><a href="https://issuu.com/westwinducla/docs/fall_17_westwind_journal/70" target="_blank">Little Brother</a> // Westwind Journal, Fall 2017.</p>
+	  <p><a href="http://cahoodaloodaling.com/divorcees-by-jasmine-don/" target="_blank">Divorcees</a>, Cahoodaloodaling Fall 2018</p>
+	  <p><a href="https://issuu.com/westwinducla/docs/fall_17_westwind_journal/70" target="_blank">Little Brother</a>, Westwind Journal Fall 2017.</p>
 	  <p>Another short story of mine called "Avenal, CA" was chosen as a winner of the 2016 David Sedaris Humor Writing Contest, but that webpage seems to have been swallowed up by the internet. You can read it <a href="Avenal.pdf">here</a> instead.</p>
 	</div>
   </div>
