--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -44,7 +44,7 @@
   		<h2>Games</h2>
   	</div>
   	<div class="card-content">
-		<p>I'm working on a Twine game called <a href="night shift MASTER (1).html" target="_blank">Night Shift</a>. This is a very, very, very rough draft.</p>
+		<p>I'm working on a Ren'Py game called Night Shift.</p>
 	</div>
   </div>
 </body>
