--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -45,10 +45,10 @@
   	</div>
   	<div class="card-content">
 		<p>I'm working on a Ren'Py game called Night Shift. It's a visual novel about working at a haunted grocery store, largely inspired by the time I worked at a haunted grocery store.</p>
-		<p><img src="bg meat.png"></p>
-		<p><img src="quickgrocer.png"></p>
-		<p><img src="bg garage.png"></p>
-		<p><img src="main menu.png"></p>
+		<p><img src="bg meat.png" alt="meat"></p>
+		<p><img src="quickgrocer.png" alt="quickgrocer"></p>
+		<p><img src="bg garage.png" alt="garage"></p>
+		<p><img src="main menu.png" alt="main menu"></p>
 	</div>
   </div>
 </body>
