--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -45,10 +45,10 @@
   	</div>
   	<div class="card-content">
 		<p>I'm working on a Ren'Py game called Night Shift. It's a visual novel about working at a haunted grocery store, largely inspired by the time I worked at a haunted grocery store.</p>
-		<p><img src="bg meat.png" alt="meat" style="width:400px;height:225px;"></p>
-		<p><img src="quickgrocer.png" alt="quickgrocer" style="width:400px;height:225px;"></p>
-		<p><img src="bg garage.png" alt="garage" style="width:400px;height:225px;"></p>
-		<p><img src="main menu.png" alt="main menu" style="width:400px;height:225px;"></p>
+		<p><img src="bg meat.png" alt="meat" style="width:640px;height:360px;align:center;"></p>
+		<p><img src="quickgrocer.png" alt="quickgrocer" style="width:640px;height:360px;align:center;"></p>
+		<p><img src="bg garage.png" alt="garage" style="width:640px;height:360px;align:center;"></p>
+		<p><img src="main menu.png" alt="main menu" style="width:640px;height:360px;align:center;"></p>
 	</div>
   </div>
 </body>
