--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="card">
   	<div class="card-content">
 	  <p>Hey there, I’m Jasmine! I’m an LA based writer with a background in short fiction and comedy.</p>
-	  <p>Follow me on Twitter <a href ="https://twitter.com/jasminevdon" title="Twitter" target="_blank">@jasminevdon</a></p>
+	  <p>Catch me Tweetin' <a href ="https://twitter.com/jasminevdon" title="Twitter" target="_blank">@jasminevdon</a>.</p>
 	</div>
   </div>
 
