--- a/fiction-comedy/index.html
+++ b/fiction-comedy/index.html
@@ -26,7 +26,7 @@
   	<div class="card-content">
 	  <p><a href="http://cahoodaloodaling.com/divorcees-by-jasmine-don/" target="_blank">Divorcees</a>, Cahoodaloodaling Fall 2018.</p>
 	  <p><a href="https://issuu.com/westwinducla/docs/fall_17_westwind_journal/70" target="_blank">Little Brother</a>, Westwind Journal Fall 2017.</p>
-	  <p>Another short story of mine called "Avenal, CA" was chosen as a winner of the 2016 David Sedaris Humor Writing Contest, but that webpage seems to have been swallowed up by the internet. You can read it <a href="Avenal.pdf">here</a> instead.</p>
+		<p><a href="https://www.sca.ucla.edu/8thannual/" target="_blank">Avenal, CA</a>, Winner of the David Sedaris Humor Writing Contest Spring 2016.</p>
 	</div>
   </div>
 
