--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
 	<div class="hero-gradient-lg">
-		<div class="title noselect">Jasmine Don</div>		
+		<div class="title noselect">Jasmine Don</div>
 	</div>
 
 	<div class="center-wrapper">
 		<div class="black-bar">
-			<span><a href="articles/" title="articles">Articles</a></span>
-			<span><a href="fiction-comedy/" title="fiction & comedy">Fiction &amp; Comedy</a></span>
-			<span><a href="resume.pdf" title="resume" target="_blank">Resume</a></span>
+			<span><a href="comedy/" title="comedy">Comedy</a></span>
+			<span><a href="fiction/" title="fiction">Fiction</a></span>
 		</div>
 	</div>
 
