--- a/fiction/index.html
+++ b/fiction/index.html
@@ -4,7 +4,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css" />
-	<title> Fiction and Comedy | Jasmine Don </title>
+	<title> Fiction| Jasmine Don </title>
 </head>
 <body>
 
@@ -13,14 +13,14 @@
   </div>
   <div class="center-wrapper">
     <div class="black-bar">
-      <span><a href="../articles" title="articles">Articles</a></span>
-      <span class="active-page">Fiction &amp; Comedy</span>
+      <span><a href="../comedy" title="comedy">Comedy</a></span>
+      <span class="active-page">Fiction</span>
       <span><a href="../resume.pdf" title="resume" target="_blank">Resume</a></span>
     </div>
-  </div>  
+  </div>
 
   <div class="card">
-    <div class="card-title"> 
+    <div class="card-title">
   		<h2>Fiction</h2>
   	</div>
   	<div class="card-content">
@@ -30,17 +30,8 @@
 	</div>
   </div>
 
-  <div class="card" style="animation-delay: .1s">
-    <div class="card-title"> 
-  		<h2>The Westwood Enabler</h2>
-  	</div>
-  	<div class="card-content">	  
-  	<p>The Enabler is a satirical news magazine (like The Onion) based at UCLA. My author page is <a href="http://westwoodenabler.com/author/jdon528/" target="_blank">here</a>.</p>
- 	</div>
-</div>
-	  
 <div class="card" style="animation-delay: .1s">
-    <div class="card-title"> 
+    <div class="card-title">
   		<h2>Games</h2>
   	</div>
   	<div class="card-content">
@@ -53,11 +44,11 @@
 			}
 		</style>
 		<p><img src="bg meat.png" alt="meat" style="width:640px;height:360px;"></p>
-		
+
 		<p><img src="quickgrocer.png" alt="quickgrocer" style="width:640px;height:360px;"></p>
-		
+
 		<p><img src="bg garage.png" alt="garage" style="width:640px;height:360px;"></p>
-		
+
 		<p><img src="main menu.png" alt="main menu" style="width:640px;height:360px;"></p>
 	</div>
   </div>
