--- a/comedy/index.html
+++ b/comedy/index.html
@@ -24,6 +24,7 @@
   	</div>
   	<div class="card-content">
 	  <p>I'm currently a writer for Moon Goon, a <a href="https://sunset.ucbtheatre.com/show/1684" title="UCB Maude Night" target="_blank">Maude Night</a> sketch comedy team at Upright Citizens Brigade.</p>
+	  <p><iframe width="560" height="315" src="https://www.youtube.com/embed/azwgDZVBN50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 	</div>
   </div>
 
