--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<div class="card">
   	<div class="card-content">
-	  <p>Hey, I’m Jasmine! I’m an LA based comedy and short fiction writer.</p>
+	  <p>Hey, I’m Jasmine! I’m a comedy and short fiction writer in LA.</p>
 	  <p>Catch me Tweetin' <a href ="https://twitter.com/jasminevdon" title="Twitter" target="_blank">@jasminevdon</a>.</p>
 	</div>
   </div>
