--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="PhotoSwipe/dist/photoswipe.css" />
+	<script src="PhotoSwipe/dist/photoswipe.js"></script>
 	<title> Jasmine Don </title>
 </head>
 <body>
