--- a/comedy/index.html
+++ b/comedy/index.html
@@ -4,6 +4,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css" />
+	<link rel="stylesheet" href="../photo-gallery/material-photo-gallery.css"
 	<title>Comedy | Jasmine Don </title>
 </head>
 <body>
@@ -23,7 +24,7 @@
   		<h2>Moon Goon</h2>
   	</div>
   	<div class="card-content">
-	  <p>I'm currently a writer for Moon Goon, a <a href="https://sunset.ucbtheatre.com/show/1684" title="UCB Maude Night" target="_blank">Maude Night</a> sketch comedy team at Upright Citizens Brigade.</p>
+	  <p>I'm a Maude Night writer for Moon Goon, a sketch comedy team at Upright Citizens Brigade.</p>
 	  <p class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/ns9sAH34jUk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 	  <p class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/OpJ3DhyvVT8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 	  <p class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/bjvN3tl3C7U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
@@ -32,6 +33,42 @@
 	  <p class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/azwgDZVBN50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 	</div>
   </div>
+	
+ <div class="card" style="animation-delay: .1s">
+    <div class="card-title">
+  		<h2>Upcoming Oreos</h2>
+  	</div>
+  	<div class="card-content">
+  	<p>I'm one of the people behind the Twitter account <a href="https://twitter.com/UpcomingOreos" title="UpcomingOreos - Twitter" target="_blank">@UpcomingOreos</a>. Here is some terrible stuff I have created.</p>
+	<p> <div class="m-p-g">
+  		<div class="m-p-g__thumbs" data-google-image-layout data-max-height="350">
+   		 <img src="z-target.jpg" data-full="target.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-labrea.jpg" data-full="labrea.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-pilot.jpg" data-full="pilot.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-advil.jpg" data-full="advil.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-trees.jpg" data-full="trees.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-plato.jpg" data-full="plato.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-lisa frank.jpg" data-full="lisa frank.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-scooby.jpg" data-full="scooby.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-rebecca.jpg" data-full="rebecca.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-texts from dad.jpg" data-full="texts from dad.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-23andme.jpg" data-full="23andme.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-benedict.jpg" data-full="benedict.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-candle.jpg" data-full="candle.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-daigo.jpg" data-full="daigo.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-cranberry.jpg" data-full="cranberry.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-david.jpg" data-full="david.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-starbucks.jpg" data-full="starbucks.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-spaghetti.jpg" data-full="spaghetti.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-gentrifier.jpg" data-full="gentrifier.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-costco onion.jpg" data-full="costco onion.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-claires.jpg" data-full="claires.jpg" class="m-p-g__thumbs-img" />
+   		 <img src="z-eraserhead baby.jpg" data-full="eraserhead baby.jpg" class="m-p-g__thumbs-img" />
+		 <img src="z-pool water.jpg" data-full="pool water.jpg" class="m-p-g__thumbs-img" />
+		</div>
+	<div class="m-p-g__fullscreen"></div>
+	</div>
+ 	</div>
 
   <div class="card" style="animation-delay: .1s">
     <div class="card-title">
@@ -41,6 +78,13 @@
   	<p>The Enabler is a satirical news magazine (like The Onion) based at UCLA. My author page is <a href="http://westwoodenabler.com/author/jdon528/" target="_blank">here</a>.</p>
  	</div>
 </div>
+
+	 <script src=path/to/material-photo-gallery.js></script>
+	 <script>var elem = document.querySelector('.m-p-g');
+
+document.addEventListener('DOMContentLoaded', function() {
+  var gallery = new MaterialPhotoGallery(elem);
+});</script>
 
 </body>
 </html>
