--- a/comedy/index.html
+++ b/comedy/index.html
@@ -4,8 +4,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css" />
-	<link rel="stylesheet" href="../photo-gallery/material-photo-gallery.css"
 	<title>Comedy | Jasmine Don </title>
+	<link rel="stylesheet" href="../photo-gallery/material-photo-gallery.css">
 </head>
 <body>
 
@@ -80,11 +80,11 @@
 </div>
 
 	 <script src=path/to/material-photo-gallery.js></script>
-	 <script>var elem = document.querySelector('.m-p-g');
+	 <script var elem = document.querySelector('.m-p-g');
 
-document.addEventListener('DOMContentLoaded', function() {
-  var gallery = new MaterialPhotoGallery(elem);
-});</script>
+	document.addEventListener('DOMContentLoaded', function() {
+  	var gallery = new MaterialPhotoGallery(elem);
+	});></script>
 
 </body>
 </html>
