--- a/comedy/index.html
+++ b/comedy/index.html
@@ -73,21 +73,21 @@
   </div>
 	
 
-  <div class="card" style="animation-delay: .1s">
+ <div class="card" style="animation-delay: .1s">
     <div class="card-title">
   		<h2>The Westwood Enabler</h2>
   	</div>
   	<div class="card-content">
   	<p>The Enabler is a satirical news magazine (like The Onion) based at UCLA. My author page is <a href="http://westwoodenabler.com/author/jdon528/" target="_blank">here</a>.</p>
  	</div>
+	</div>
 </div>
 
-	 <script src=path/to/material-photo-gallery.js></script>
-	 <script var elem = document.querySelector('.m-p-g');
-
+<script src=path/to/material-photo-gallery.js></script>
+<script var elem = document.querySelector('.m-p-g');
 	document.addEventListener('DOMContentLoaded', function() {
   	var gallery = new MaterialPhotoGallery(elem);
-	});></script>
+		});></script>
 
 </body>
 </html>
