--- a/comedy/index.html
+++ b/comedy/index.html
@@ -84,10 +84,12 @@
 </div>
 
 <script src=path/to/material-photo-gallery.js></script>
-<script var elem = document.querySelector('.m-p-g');
-	document.addEventListener('DOMContentLoaded', function() {
-  	var gallery = new MaterialPhotoGallery(elem);
-		});></script>
+<script> 
+var elem = document.querySelector('.m-p-g');
+
+document.addEventListener('DOMContentLoaded', function() {
+  var gallery = new MaterialPhotoGallery(elem);
+});</script>
 
 </body>
 </html>
