--- a/comedy/index.html
+++ b/comedy/index.html
@@ -83,7 +83,7 @@
 	</div>
 </div>
 
-<script src=path/to/material-photo-gallery.js></script>
+<script src=../photo-gallery/material-photo-gallery.js></script>
 <script> 
 var elem = document.querySelector('.m-p-g');
 
