--- a/comedy/index.html
+++ b/comedy/index.html
@@ -65,7 +65,7 @@
 		</div>
 	 </div>
   </div>
-<script src="../photo-gallery/material-photo-gallery.js"></script>
+<script src="../photo-gallery/material-photo-gallery.min.js"></script>
 <script> 
 var elem = document.querySelector('.m-p-g');
 
