--- a/comedy/index.html
+++ b/comedy/index.html
@@ -39,8 +39,8 @@
   		<h2>Upcoming Oreos</h2>
   	</div>
   	<div class="card-content">
-  	<p>I'm one of the people behind the Twitter account <a href="https://twitter.com/UpcomingOreos" title="UpcomingOreos - Twitter" target="_blank">@UpcomingOreos</a>. Here is some terrible stuff I have created.</p>
-	<p> <div class="m-p-g">
+  	  <p>I'm one of the people behind the Twitter account <a href="https://twitter.com/UpcomingOreos" title="UpcomingOreos - Twitter" target="_blank">@UpcomingOreos</a>. Here is some terrible stuff I have created.</p>
+	  <p> <div class="m-p-g">
   		<div class="m-p-g__thumbs" data-google-image-layout data-max-height="350">
    		 <img src="z-target.jpg" data-full="target.jpg" class="m-p-g__thumbs-img" />
    		 <img src="z-labrea.jpg" data-full="labrea.jpg" class="m-p-g__thumbs-img" />
@@ -61,7 +61,7 @@
 		 <img src="z-claires.jpg" data-full="claires.jpg" class="m-p-g__thumbs-img" />
 		 <img src="z-pool water.jpg" data-full="pool water.jpg" class="m-p-g__thumbs-img" />
 			</div>
-		<div class="m-p-g__fullscreen"></div>
+		<div class="m-p-g__fullscreen"></div></p>
 		</div>
 	 </div>
   </div>
