--- a/comedy/index.html
+++ b/comedy/index.html
@@ -61,8 +61,8 @@
 		 <img src="z-claires.jpg" data-full="claires.jpg" class="m-p-g__thumbs-img" />
 		 <img src="z-pool water.jpg" data-full="pool water.jpg" class="m-p-g__thumbs-img" />
 			</div>
-		<div class="m-p-g__fullscreen"></div></p>
-		</div>
+		<div class="m-p-g__fullscreen"></div>
+		</div></p>
 	 </div>
   </div>
 <script src="../photo-gallery/material-photo-gallery.min.js"></script>
