--- a/comedy/index.html
+++ b/comedy/index.html
@@ -39,7 +39,7 @@
   		<h2>Upcoming Oreos</h2>
   	</div>
   	<div class="card-content">
-  	  <p>I'm one of the people behind the Twitter account <a href="https://twitter.com/UpcomingOreos" title="UpcomingOreos - Twitter" target="_blank">@UpcomingOreos</a>. Here is some terrible stuff I have created.</p>
+  	  <p>I'm one of the people behind the Twitter account <a href="https://twitter.com/UpcomingOreos" title="UpcomingOreos - Twitter" target="_blank">@UpcomingOreos</a>. My work has been called, in the words of one Twitter user, "Truly revolting on a spiritual level." Here are some of the flavors I made.</p>
 	  <div class="m-p-g">
   		<div class="m-p-g__thumbs" data-google-image-layout data-max-height="350">
    		 <img src="z-target.jpg" data-full="target.jpg" class="m-p-g__thumbs-img" />
